@@ -205,8 +205,9 @@ static DeprecatedString startMarkup(const Node *node, const Range *range, EAnnot
             for (unsigned int i = 0; i < length; i++) {
                 Attribute *attr = attrs->attributeItem(i);
                 String value = attr->value();
-                if (attr->name() == styleAttr && convertBlocksToInlines) {
-                    RefPtr<CSSMutableStyleDeclaration> inlineStyle = static_cast<const HTMLElement*>(el)->getInlineStyleDecl()->copy();
+                if (attr->name() == styleAttr && convertBlocksToInlines && el->isHTMLElement()) {
+                    Element* element = const_cast<Element*>(el);
+                    RefPtr<CSSMutableStyleDeclaration> inlineStyle = static_cast<HTMLElement*>(element)->getInlineStyleDecl()->copy();
                     inlineStyle->setProperty(CSS_PROP_DISPLAY, CSS_VAL_INLINE, true);
                     value = inlineStyle->cssText();
                 }
